// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacetSelect should render with optgroup 1`] = `
<div>
  <label
    class="ff-label"
    for="field-dynamic-example"
  >
     Example 
  </label>
   
  <div
    class="ff-choice__option ff-choice__option--flex"
  >
    <select
      class="ff-select"
      id="field-dynamic-example"
      name="example"
    >
      <!---->
       
      <optgroup
        label="Group 1"
      >
        <option
          value="option-1"
        >
          
                        Option 1
                    
        </option>
        <option
          value="option-2"
        >
          
                        Option 2
                    
        </option>
      </optgroup>
      <optgroup
        label="Group 2"
      >
        <option
          value="option-2"
        >
          
                        Option 3
                    
        </option>
        <option
          value="option-4"
        >
          
                        Option 4
                    
        </option>
      </optgroup>
    </select>
     
    <!---->
  </div>
</div>
`;

exports[`FacetSelect should render with plain options 1`] = `
<div>
  <label
    class="ff-label"
    for="field-dynamic-example"
  >
     Example 
  </label>
   
  <div
    class="ff-choice__option ff-choice__option--flex"
  >
    <select
      class="ff-select"
      id="field-dynamic-example"
      name="example"
    >
      <!---->
       
      <option
        value="option-1"
      >
        
                    Option 1
                
      </option>
      <option
        value="option-2"
      >
        
                    Option 2
                
      </option>
    </select>
     
    <button
      class="active-filter active-filter--mini u-margin-left-s"
    >
      <svg
        aria-describedby="aria-close-desc-clear-field-dynamic-example"
        class="icon icon--close"
        role="img"
        viewBox="0 0 512 512"
        width="46"
        xmlns="http://www.w3.org/2000/svg"
      >
        <desc
          id="aria-close-desc-clear-field-dynamic-example"
        >
          Clear selection
        </desc>
         
        <path
          d="M340.2 160l-84.4 84.3-84-83.9-11.8 11.8 84 83.8-84 83.9 11.8 11.7 84-83.8 84.4 84.2 11.8-11.7-84.4-84.3 84.4-84.2z"
        />
      </svg>
    </button>
  </div>
</div>
`;
